# Structured-Extractor

./: .gitignore  README.md  SKILL.md  install.ps1  install.sh  pyproject.toml
assets/presets/: code-logic.json  doc-structure.json  log-analysis.json
cursor/: structured-extractor.mdc
references/: extraction-types.md  few-shot-templates.md  output-schema.md  post-processing.md
scripts/: __init__.py  confidence_scorer.py  entity_resolver.py  kg_injector.py  overlap_dedup.py  pipeline.py  relation_inferrer.py
scripts/test_data/: sample_input.json  sample_output.json  sample_source.cs
test/: test_final_extractions.json  test_raw_extractions.json
tests/: conftest.py  test_confidence_scorer.py  test_entity_resolver.py  test_kg_injector.py  test_overlap_dedup.py  test_pipeline.py  test_relation_inferrer.py  test_source_grounding.py
